--- a/roles/homefiles/tasks/main.yml
+++ b/roles/homefiles/tasks/main.yml
@@ -31,3 +31,9 @@
     src: "{{ homefiles_dir }}/bashrc.sh"
     dest: "{{ home_dir }}/.bashrc"
     state: link
+
+- name: Create link for ~/.zshrc
+  file:
+    src: "{{ homefiles_dir }}/zshrc.sh"
+    dest: "{{ home_dir }}/.zshrc"
+    state: link
