--- a/setup/roles/neovim/tasks/main.yml
+++ b/setup/roles/neovim/tasks/main.yml
@@ -7,6 +7,7 @@
     repo: 'ppa:neovim-ppa/unstable'
     state: present
     update_cache: yes
+    codename: '{{ distrib_codename }}'
 
 - name: Install prerequisites for the Python modules
   become: yes
