--- a/setup/roles/homefiles/tasks/main.yml
+++ b/setup/roles/homefiles/tasks/main.yml
@@ -8,6 +8,14 @@
   args:
     creates: $HOME/homefiles/vendor/antigen/antigen.zsh
 
+- name: Create secrets directory
+  file: path=$HOME/secrets state=directory
+
+- name: Create secrets README
+  shell: echo "# Shell files exporting secrets as environment variables." > $HOME/secrets/README
+  args:
+    creates: $HOME/secrets/README
+
 - name: Get status for ~/bin
   stat:
     path: "{{ home_dir }}/bin"
