--- a/setup/roles/git/tasks/main.yml
+++ b/setup/roles/git/tasks/main.yml
@@ -8,3 +8,7 @@
 - name: Install git
   become: yes
   apt: name=git state=latest update_cache=yes
+
+- name: Install gitg
+  become: yes
+  apt: name=gitg
