--- a/setup/roles/java/tasks/main.yml
+++ b/setup/roles/java/tasks/main.yml
@@ -2,3 +2,10 @@
 - name: Install java
   become: yes
   apt: name=default-jdk
+
+- name: Install IntelliJ IDEA
+  unarchive:
+    src: https://download-cf.jetbrains.com/idea/ideaIU-2017.2.4-no-jdk.tar.gz
+    dest: "{{ home_dir }}/opt/"
+    remote_src: yes
+    creates: "{{ home_dir }}/opt/idea-IU-172.4155.36/bin/idea.sh"
