--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -35,6 +35,7 @@
     - jq
     - language-pack-en-base
     - less
+    - pcregrep
     - silversearcher-ag
     - software-properties-common
     - tree
