--- a/ansible/roles/chrome/tasks/main.yml
+++ b/ansible/roles/chrome/tasks/main.yml
@@ -2,9 +2,9 @@
 - name: Add Google Chrome repository
   become: yes
   apt_repository:
-    repo: deb http://dl.google.com/linux/chrome/deb/ stable main
+    repo: deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main
     state: present
-    filename: chrome.list
+    filename: google-chrome
 
 - name: Add Google Chrome apt signing key
   become: yes
