--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -27,6 +27,7 @@
   apt: name={{item}} state=installed
   with_items:
     - apt-transport-https
+    - awscli
     - ca-certificates
     - colordiff
     - curl
