--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -24,7 +24,7 @@
 
 - name: Install basic packages
   become: yes
-  apt: name={{item}} state=installed
+  apt: name={{item}} state=present
   with_items:
     - apt-transport-https
     - awscli
