--- a/ansible/roles/neovim/tasks/main.yml
+++ b/ansible/roles/neovim/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Install prerequisites for the Python modules
   become: yes
-  apt: name={{item}} state=installed
+  apt: name={{item}} state=present
   with_items:
     - python-dev
     - python-pip
