--- a/ansible/roles/zsh/tasks/main.yml
+++ b/ansible/roles/zsh/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install packages
   become: yes
-  apt: name={{item}} state=installed
+  apt: name={{item}} state=present
   with_items:
     - fonts-powerline
     - git-core
