--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -37,6 +37,8 @@
     - jq
     - keepass2
     - language-pack-en-base
+    - libncurses5-dev
+    - libncursesw5-dev
     - less
     - pcregrep
     - scala
