--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -40,6 +40,7 @@
     - libncurses5-dev
     - libncursesw5-dev
     - less
+    - pavucontrol
     - pcregrep
     - scala
     - silversearcher-ag
