--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -3,6 +3,7 @@
 
   vars:
     distrib_codename: "{{ lookup('env', 'DISTRIB_CODENAME') }}"
+    node_version: "8.11.3"
 
   roles:
   - common
@@ -19,3 +20,4 @@
   - neovim
   - chrome
   - zoom
+  - node
