Install keepassxc instead of keepass2

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -36,7 +36,7 @@
     - fonts-hack-ttf
     - htop
     - jq
-    - keepass2
+    - keepassxc
     - language-pack-en-base
     - less
     - libbz2-dev
